testdata/baselines/reference/submodule/conformance/typeFromParamTagForFunction.errors.txt
a.js(3,13): error TS2749: 'A' refers to a value, but is being used as a type here. Did you mean 'typeof A'?
b.js(3,13): error TS2749: 'B' refers to a value, but is being used as a type here. Did you mean 'typeof B'?
c.js(3,13): error TS2749: 'C' refers to a value, but is being used as a type here. Did you mean 'typeof C'?
d.js(3,13): error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
f.js(5,13): error TS2749: 'F' refers to a value, but is being used as a type here. Did you mean 'typeof F'?
g.js(5,13): error TS2749: 'G' refers to a value, but is being used as a type here. Did you mean 'typeof G'?


==== node.d.ts (0 errors) ====
    declare function require(id: string): any;
    declare var module: any, exports: any;
    
==== a-ext.js (0 errors) ====
    exports.A = function () {
        this.x = 1;
    };
    
==== a.js (1 errors) ====
    const { A } = require("./a-ext");
    
    /** @param {A} p */
                ~
!!! error TS2749: 'A' refers to a value, but is being used as a type here. Did you mean 'typeof A'?
    function a(p) { p.x; }
    
==== b-ext.js (0 errors) ====
    exports.B = class {
        constructor() {
            this.x = 1;
        }
    };
    
==== b.js (1 errors) ====
    const { B } = require("./b-ext");
    
    /** @param {B} p */
                ~
!!! error TS2749: 'B' refers to a value, but is being used as a type here. Did you mean 'typeof B'?
    function b(p) { p.x; }
    
==== c-ext.js (0 errors) ====
    export function C() {
        this.x = 1;
    }
    
==== c.js (1 errors) ====
    const { C } = require("./c-ext");
    
    /** @param {C} p */
                ~
!!! error TS2749: 'C' refers to a value, but is being used as a type here. Did you mean 'typeof C'?
    function c(p) { p.x; }
    
==== d-ext.js (0 errors) ====
    export var D = function() {
        this.x = 1;
    };
    
==== d.js (1 errors) ====
    const { D } = require("./d-ext");
    
    /** @param {D} p */
                ~
!!! error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
    function d(p) { p.x; }
    
==== e-ext.js (0 errors) ====
    export class E {
        constructor() {
            this.x = 1;
        }
    }
    
==== e.js (0 errors) ====
    const { E } = require("./e-ext");
    
    /** @param {E} p */
    function e(p) { p.x; }
    
==== f.js (1 errors) ====
    var F = function () {
        this.x = 1;
    };
    
    /** @param {F} p */
                ~
!!! error TS2749: 'F' refers to a value, but is being used as a type here. Did you mean 'typeof F'?
    function f(p) { p.x; }
    
==== g.js (1 errors) ====
    function G() {
        this.x = 1;
    }
    
    /** @param {G} p */
                ~
!!! error TS2749: 'G' refers to a value, but is being used as a type here. Did you mean 'typeof G'?
    function g(p) { p.x; }
    
==== h.js (0 errors) ====
    class H {
        constructor() {
            this.x = 1;
        }
    }
    
    /** @param {H} p */
    function h(p) { p.x; }